tests/golden/type_errors/len_static_invalid_type.err
Type error at 1:14: len expects array, string, or map, got number
  print len(123);
               ^
